--- a/src/main/resources/tpl/spa-auth.html
+++ b/src/main/resources/tpl/spa-auth.html
@@ -1,4 +1,5 @@
-<h2>IзОД</h2>
+﻿<h2>ІзОД</h2>
 <p>
-    Информация с ограниченным доступом. Данная страница доступна только авторизированым пользователям.
+    Інформація з обмеженим доступом. Даний контент доступний
+    лише авторизованим користувачам.
 </p>
